Alignment issues fixed

--- a/src/input.css
+++ b/src/input.css
@@ -425,8 +425,8 @@ ul {
 body {
   overflow-x: hidden !important;
 }
-.container {
+/* .container {
   max-width: 100% !important;
   overflow-x: hidden !important;
-}
+} */
 
